@@ -4,6 +4,7 @@
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage{chngpage}   % for exReport \begin{adjustwidth}
+\usepackage{relsize}
 
 \def\titl{DSMB Report for EXAMPLE Trial}
 
@@ -154,7 +155,7 @@ dNeedle(c(1,2,3,1)/4,'lttdemod')
   \end{tabular}
 \end{center}
 \paragraph{Extended Box Plots}
-\newcommand{\eboxpopup}[1]{\tooltipm{#1}{\includegraphics{bpplt-proto}}}
+\newcommand{\eboxpopup}[1]{\tooltipm{#1}{\includegraphics{bpplt-proto-1}}}
 % To not generate pop-up use: \newcommand{\eboxpopup}[1]{}
 
 For depicting distributions of continuous variables, many of the
@@ -163,6 +164,16 @@ box--percentile plots.  A prototype, with explanations, is below.
 <<bpplt-proto,w=5,h=3.5>>=
 bpplt()
 @ 
+
+\paragraph{Dot Charts}
+Dot charts are used to present stratified proportions.  In these
+charts the area of the symbols is proportional to the square root of
+the denominator.  The legend shows representative denominators and
+their corresponding symbol areas, using denominators that actually
+occurred in the data and extended from the minimum observed to the
+maximum observed sample size.
+
+
 \paragraph{Survival Curves}
 Graphs containing pairs of Kaplan-Meier survival curves show a shaded
 region centered at the midpoint of the two survival estimates and
@@ -259,22 +270,22 @@ dasna <- subset(d, region=='North America')
 # with(dasna, table(race, treat))
 den <- c(enrolled=n + 50, randomized=n, table(d$treat))
 setgreportOption(denom=den, tx.var='treat')
-             
+           
 dReport(race + sex +
-           ynbind(x1, x2, x3, x4, x5, x6, x7, label='Exclusions') ~ 1,
-           head='Overall frequencies of categorical demographic variables and exclusions',
-           data=d, w=4, h=4.5, popts=list(layout=c(1,3)))
+        ynbind(x1, x2, x3, x4, x5, x6, x7, label='Exclusions') ~ 1,
+        head='Overall frequencies of categorical demographic variables and exclusions',
+        data=d, w=4, h=4.5)
 
 dReport(race + sex ~ region, data=addMarginal(d, region),
         groups='region', append=TRUE,
-        w=4.75, h=2.75, subpanel='demoreg',
+        w=4.75, h=3.75, subpanel='demoreg',
         head='Demographics')
            
 ## Add a new block of variables that apply only to males
 dReport(race + sex +
         pBlock(race, subset=sex=='Male', label='Race: Males') ~ region,
         data=d, groups='region', append=TRUE,
-        w=4.75, h=3.5, subpanel='demoblock',
+        w=4.75, h=4, subpanel='demoblock',
         head='Demographics with race for males')
 
 excl <- with(d, ynbind(x1, x2, x3, x4, x5, x6, x7,
